compiler/tools/fpp-check/test/port_instance/undef_product_recv.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_product_recv.fpp:3.3
  async product recv port productRecvIn
  ^
error: symbol Fw is not defined
note: looking for a port here
